# python-sdbus

./: .gitignore  .python-version  .readthedocs.yaml  CHANGELOG.md  DEPRECATIONS.md  FEATURE_LIST.md  KNOWN_ISSUES  PACKAGING.md  README  README.md  lgtm.yml  meson.build  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ubuntu_pypi_test.yml  ubuntu_test.yml
docs/: api_index.rst  asyncio.rst  asyncio_api.rst  asyncio_deep.rst  asyncio_quick.rst  autodoc.rst  code_generator.rst  common_api.rst  conf.py  examples.rst  exceptions.rst  general.rst  index.rst  proxies.rst  requirements.txt  sync.rst  sync_api.rst  sync_quick.rst  unittest.rst  utils.rst
docs/proxies/: dbus.rst  network_manager.rst  notifications.rst  systemd.rst
examples/simple/: client.py  client_blocking.py  example_interface.py  server.py
interfaces/networkmanager/: README.md  setup.py
interfaces/networkmanager/sdbus_async/networkmanager/: __init__.py  interfaces_devices.py  interfaces_other.py  objects.py
interfaces/networkmanager/sdbus_block/networkmanager/: __init__.py  enums.py  interfaces_devices.py  interfaces_other.py  objects.py
interfaces/notifications/: README.md  setup.py
interfaces/notifications/sdbus_async/notifications/: __init__.py
interfaces/notifications/sdbus_block/notifications/: __init__.py
py_sd_bus/: __init__.py  dbus_common.py  dbus_exceptions.py  dbus_proxy.py  dbus_proxy_async.py  dbus_proxy_sync.py  sd_bus_internals.c  sd_bus_internals.py  sd_bus_internals.pyi
py_sd_bus/_proxies_common/: __init__.py
py_sd_bus/async_proxies/: __init__.py
py_sd_bus/proxies/: __init__.py
sd_bus/: sd_bus_internals.c
sdbus/: __init__.py  dbus_common.py  dbus_exceptions.py  dbus_proxy_async.py  dbus_proxy_sync.py  sd_bus_internals.c  sd_bus_internals.py
sdbus/_proxies_common/: __init__.py
sdbus/async_proxies/: __init__.py
sdbus/proxies/: __init__.py
src/: meson.build
src/sdbus/: __init__.py  __main__.py  autodoc.py  dbus_common.py  dbus_common_elements.py  dbus_common_funcs.py  dbus_exceptions.py  dbus_proxy_async.py  dbus_proxy_async_interface_base.py  dbus_proxy_async_interfaces.py  dbus_proxy_async_method.py  dbus_proxy_async_object_manager.py  dbus_proxy_async_property.py  dbus_proxy_async_signal.py  dbus_proxy_sync.py  dbus_proxy_sync_interface_base.py  dbus_proxy_sync_interfaces.py  dbus_proxy_sync_method.py  dbus_proxy_sync_property.py  default_bus.py  exceptions.py  interface_generator.py  meson.build  py.typed  sd_bus_internals.c  sd_bus_internals.h  sd_bus_internals.py  sd_bus_internals.pyi  sd_bus_internals_bus.c  sd_bus_internals_funcs.c  sd_bus_internals_interface.c  sd_bus_internals_message.c  unittest.py  utils.py
src/sdbus/_proxies_common/: __init__.py
src/sdbus/async_proxies/: __init__.py  freedesktop.py  network_manager.py  systemd.py
src/sdbus/proxies/: __init__.py  freedesktop.py  systemd.py
src/sdbus/utils/: __init__.py  inspect.py  parse.py
src/sdbus_async/dbus_daemon/: __init__.py
src/sdbus_block/dbus_daemon/: __init__.py
test/: __init__.py  common_test_util.py  leak_tests.py  test_default_bus.py  test_deprecations.py  test_high_level_errors.py  test_interface_generator.py  test_low_level_api.py  test_low_level_errors.py  test_object_manager.py  test_proxies.py  test_read_write_dbus_types.py  test_request_name.py  test_sd_bus.py  test_sd_bus_async.py  test_sd_bus_sync.py  test_sdbus_async.py  test_sdbus_async_bad_class.py  test_sdbus_async_block_adapter.py  test_sdbus_async_introspection.py  test_sdbus_block.py  test_sdbus_block_bad_class.py  test_sdbus_utils.py  test_typing.py
test/benchmarks/: __init__.py  bench_async_ping.py  bench_block_ping.py
test/containers/: Containerfile-alpine
tools/: run_py_linters.py
wheel-build/: audit_wheel_wrapper.py  build_container_archive.py  consistent_interface_order.patch  meson.build  run_inside_container.py  run_podman.py  run_podman_full_build.py  systemd_no_gettid_no_getdents64.patch
